<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.trabalhoprogmoba2.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_sixFragment"
            app:destination="@id/sixFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/threeFragment"
        android:name="com.example.trabalhoprogmoba2.ThreeFragment"
        android:label="@string/three_fragment_label"
        tools:layout="@layout/fragment_three" >
        <action
            android:id="@+id/action_threeFragment_to_sixFragment"
            app:destination="@id/sixFragment" />
    </fragment>
    <fragment
        android:id="@+id/fourFragment"
        android:name="com.example.trabalhoprogmoba2.FourFragment"
        android:label="@string/for_fragment_label"
        tools:layout="@layout/fragment_four" >
        <action
            android:id="@+id/action_fourFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
    </fragment>
    <fragment
        android:id="@+id/sixFragment"
        android:name="com.example.trabalhoprogmoba2.SixFragment"
        android:label="@string/six_fragment_label"
        tools:layout="@layout/fragment_six" >
        <action
            android:id="@+id/action_sixFragment_to_threeFragment"
            app:destination="@id/threeFragment" />
        <action
            android:id="@+id/action_sixFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_sixFragment_to_fiveFragment"
            app:destination="@id/fiveFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.example.trabalhoprogmoba2.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second" >
        <action
            android:id="@+id/action_secondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_secondFragment_to_fourFragment"
            app:destination="@id/fourFragment" />
        <action
            android:id="@+id/action_secondFragment_to_sevenFragment"
            app:destination="@id/sevenFragment" />
    </fragment>
    <fragment
        android:id="@+id/fiveFragment"
        android:name="com.example.trabalhoprogmoba2.FiveFragment"
        android:label="@string/five_fragment_label"
        tools:layout="@layout/fragment_five" >
        <action
            android:id="@+id/action_fiveFragment_to_sixFragment"
            app:destination="@id/sixFragment" />
        <action
            android:id="@+id/action_fiveFragment_to_threeFragment"
            app:destination="@id/threeFragment" />
    </fragment>
    <fragment
        android:id="@+id/sevenFragment"
        android:name="com.example.trabalhoprogmoba2.SevenFragment"
        android:label="@string/seven_fragment_label"
        tools:layout="@layout/fragment_seven" >
        <action
            android:id="@+id/action_sevenFragment_to_secondFragment"
            app:destination="@id/secondFragment" />
        <action
            android:id="@+id/action_sevenFragment_to_fourFragment"
            app:destination="@id/fourFragment" />
    </fragment>
</navigation>